trunk/Archive2/71/c4ec520e0de934/output
main.cpp:39:16: warning: missing terminating '"' character [-Winvalid-pp-token]
        printf("%d, value);
               ^
main.cpp:39:16: error: expected expression
main.cpp:46:12: warning: missing terminating '"' character [-Winvalid-pp-token]
    printf("%d, value);
           ^
main.cpp:115:3: error: expected '}'
*/
  ^
main.cpp:33:43: note: to match this '{'
unsigned loop_with_error_codes() noexcept {
                                          ^
2 warnings and 2 errors generated.
